<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Список справ</string>
    <string name="Auth">Авторизація</string>
    <string name="EnterEmail">Введіть email</string>
    <string name="EnterPassword">Введіть пароль</string>
    <string name="ConfPassword">Підтвердіть пароль</string>
    <string name="NoRegistered">Не зареєстровані? Натисніть тут для реєстрації</string>
    <string name="Register">Реєстрація</string>
    <string name="EnterLogin">Введіть логін</string>
    <string name="ReLogin">Вже зареєстровані? Натисніть тут для авторизації</string>
    <string name="or">___ Або ___</string>
    <string name="pass_length_below">Введіть пароль більше 5-ти символів</string>
    <string name="email_already_exists">Такий email вже є зареєстрований!</string>
    <string name="register_success">Реєстрація пройшла успішно</string>
    <string name="complete_all_fields">Заповність усі поля.</string>
    <string name="auth_success">Авторизація пройшла успішно</string>
    <string name="please_enter_login_and_password">Будь ласка введіть логін та пароль</string>
    <string name="something_went_wrong">" Щось пішло не так"</string>
    <string name="facebook_app_id">1470747693381314</string>
    <string name="fb_login_protocol_scheme">fb1470747693381314</string>
    <string name="default_web" tools:ignore="TypographyDashes">887478136162-25ffkojjrbd1gfpkgleolp08b6ut74em.apps.googleusercontent.com</string>
    <string name="ForgotPass">Забули пароль?</string>
    <string name="enter_email">Введіть коректний email</string>
    <string name="enter_pass"><![CDATA[Введіть пароль довжиною > 6 символів]]></string>
    <string name="pass_not_matched">Паролі не співпадають</string>
    <string name="Register_wait">Будь ласка почекайте йде реєстрація…</string>
    <string name="Register_login">Будь ласка почекайте йде авторизація…</string>
    <string name="Recover_Password">Відновити пароль</string>
    <string name="Open">Відкрити</string>
    <string name="Close">Зачинити</string>
    <string name="please_enter_email">Будь ласка введіть коректний email</string>
    <string name="please_visit_email">Будь ласка перевірте свій email і перегляньте інструкцію з відновлення паролю</string>
    <string name="versionApp">Версія 1.0</string>
    <string name="about_app">Про додаток</string>
    <string name="EnterTask">Введіть завдання</string>
    <string name="Add">Додати</string>
    <string name="reset">Скинути</string>
    <string name="update_task">Оновіть завдання</string>
    <string name="update">Оновити</string>
    <string name="delete">Ви впевнені що хочете видалити завдання?</string>
    <string name="delete_confirmation">Підтвердження видалення</string>
    <string name="success_added">Завдання успішно додане</string>
    <string name="empty_field">Текстове поле не повинне бути порожнім!!!</string>
    <string name="invalid_action_alert">Сповіщення про недійсну дію</string>
    <string name="delete_all">Ви впевнені що хочете видалити всі ваші завдання?</string>
    <string name="reset_confirmation">Підтвердження видалення всіх завдань</string>
    <string name="Complete">Виконано</string>
    <string name="AddTask">Додати завдання</string>
    <string name="new_task">Додати нове завдання</string>
    <string name="describe_todo_task">Опишіть ваше завдання…</string>
    <string name="add_task">Додати завдання</string>
    <string name="cancel">Скасувати</string>
    <string name="Done">Виконано</string>
    <string name="want">Що ви хочете зробити наступне?</string>
    <string name="add">Додати</string>
    <string name="Select_Language" translatable="true">Виберіть мову</string>
    <string name="Profile">Профіль</string>
    <string name="ProfileUser">Профіль користувача:</string>
    <string name="Name">Ім\'я</string>
    <string name="Email">Email</string>
    <string name="Logout">Вихід</string>
</resources>