<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/prof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/ProfileUser"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:layout_below="@+id/prof"
        android:textSize="30sp"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_below="@+id/name"
        android:textSize="30sp"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/mail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="22sp"
        android:text="@string/Logout"
        android:layout_margin="20dp"
        android:backgroundTint="#ff0000"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/logout"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>
