<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#000">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="#213496"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/EnterEmail"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passReg"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailReg"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="#213496"
        android:ems="10"
        android:hint="@string/EnterPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/confPassReg"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passReg"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="#213496"
        android:ems="10"
        android:hint="@string/ConfPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confPassReg"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ff0000"
        android:layout_marginBottom="8dp"
        android:text="@string/Register"
        android:textColor="#fff"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck"
         />

    <TextView
        android:id="@+id/login"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/ReLogin"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>